--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Calculator </title>
-    <link rel="shortcut icon" href="./assets/icon2/favicon.ico" type="image/x-icon">
+    <title>Simple Calculator</title>
+    <link
+      rel="shortcut icon"
+      href="./assets/icon2/favicon.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <table>
         <tr class="screen">
+          <div class="history"><p class="history-value"></p></div>
           <td colspan="4" id="inputLabel">0</td>
         </tr>
         <tr>
