add icon & fix overlaping

--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
           inputLabel.style.fontSize = fontSize - 1 + "px";
         }
       }
+      
+      function keyboard(){
+        
+      }
+
+
+
     </script>
   </body>
 </html>
